fix: vertx dependency too old

--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     "rest": "1.1.x",
     "sauce-connect-launcher": "~0.4",
     "uglify-js": "~2",
-    "wd": "~0.2"
+    "wd": "~0.2",
+    "@vertx/core": "^4.0.0"
   },
   "main": "when.js",
   "ender": {
